Adding witness to connections